--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "lint:fix": "eslint src --fix && yarn format",
     "lint:strict": "eslint --max-warnings=0 src",
     "typecheck": "tsc --noEmit --incremental false",
-    "test:watch": "jest --watch",
-    "test": "jest",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
@@ -35,7 +33,7 @@
     "graphql-request": "^5.1.0",
     "graphql-tag": "^2.12.6",
     "iron-session": "^6.3.1",
-    "next": "^13.1.6",
+    "next": "14.0.4",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -52,8 +50,6 @@
     "@mdx-js/loader": "^2.1.3",
     "@svgr/webpack": "^6.5.1",
     "@tailwindcss/forms": "^0.5.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@types/mdx": "^2.0.3",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
@@ -68,7 +64,6 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
     "lint-staged": "^12.5.0",
     "next-router-mock": "^0.7.5",
     "next-sitemap": "^2.5.28",
